@startuml it_polimi_ingsw_server_model_adventure_resolution
' Generated by tools/uml/generate-detailed.py. Do not edit by hand.
!pragma layout smetana
skinparam shadowing false
skinparam classAttributeIconSize 0
title it.polimi.ingsw.server.model.adventure.resolution

interface AdventureResolution {
  +pending() : Optional<PlayerPrompt>
  +submit() : void
  +isComplete() : boolean
}
class AutomaticResolution {
  -applied : boolean
  --
  +apply() : void
  +pending() : Optional<PlayerPrompt>
  +submit() : void
}
class TurnByTurnResolution {
  -queue : Deque<PlayerColor>
  -started : boolean
  -finished : boolean
  -current : PlayerPrompt
  -followUp : PlayerPrompt
  --
  +promptFor() : Optional<PlayerPrompt>
  +apply() : boolean
  +afterEveryone() : void
  +pending() : Optional<PlayerPrompt>
  +submit() : void
  +queueAgain() : void
  +askAgain() : void
}

AdventureResolution <|.. AutomaticResolution
AdventureResolution <|.. TurnByTurnResolution
@enduml
